Finalizaciòn reporte por camarero por mes por ventas Mejoras visuales

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -384,3 +384,9 @@ ListMesaIndexLink=Home
 ListMesaTitle_idMesa=IdMesa
 ListMesaTitle_numMaxComensales=NumMaxComensales
 ListMesaTitle_ubicacion=Ubicacion
+ReporteCamarero_nombre=Nombre Camarero
+ReporteCamarero_apellido=Apellido Camarero
+ReporteCamarero_mes=Mes reporte
+ReporteCamarero_anno=A\u00f1o reporte
+ReporteCamarero_total=Total mes
+
